--- a/e-commerce/nike-store/package.json
+++ b/e-commerce/nike-store/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
