--- a/e-commerce/nike-store/package.json
+++ b/e-commerce/nike-store/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@reduxjs/toolkit": "^2.2.7",
     "@splidejs/react-splide": "^0.7.12",
     "@splidejs/splide": "^4.1.4",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.4.1",
+    "react-redux": "^9.1.2",
+    "react-toastify": "^10.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
